--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 ../client/node_modules
 ../server/node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
@@ -15,6 +16,7 @@
 
 # misc
 .DS_Store
+/server/.env
 ../server/.env
 ../server/.env.local
 ../server/.env.development
